[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhone-policy-analyzer"
version = "0.1.0"
description = "RhôneRisk Cyber Insurance Policy Analyzer - AI-powered policy scoring and report generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.42.0",
    "pymupdf4llm>=0.0.17",
    "pdfplumber>=0.11.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
